--- a/inicio/templates/inicio/base.html
+++ b/inicio/templates/inicio/base.html
@@ -25,10 +25,11 @@
   <header class="main-header">
     <div class="logo">🌌 <a href="{% url 'webapp:home' %}">Estrella Errante</a></div>
     <nav>
-      <a href="{% url 'webapp:home' %}">Inicio</a>
-      <a href="{% url 'webapp:creators' %}">Creadores</a>
-      <a href="{% url 'webapp:contact' %}">Contacto</a>
-    </nav>
+  <a href="{% url 'webapp:home' %}">Inicio</a>
+  <a href="{% url 'webapp:creators' %}">Creadores</a>
+  <a href="{% url 'webapp:contact' %}">Contacto</a>
+  <a href="{% url 'webapp:registro' %}">Registro</a> <!-- 👈 aquí -->
+</nav>
   </header>
 
   <main class="content-fade">
