--- a/inicio/templates/inicio/base.html
+++ b/inicio/templates/inicio/base.html
@@ -35,6 +35,7 @@
   <main class="content-fade">
     {% block content %}{% endblock %}
   </main>
+  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
   <footer class="footer">
     <p>© 2025 Estrella Errante — Todos los derechos reservados.</p>
