Quedo el contador visitas

--- a/inicio/templates/inicio/home.html
+++ b/inicio/templates/inicio/home.html
@@ -86,7 +86,13 @@
       allowfullscreen>
     </iframe>
   </div>
+
 </section>
+
+<div class="contador-visitas">
+    👀 <strong>Visitas a la página:</strong> {{ contador_visitas }}
+</div>
+
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
